--- a/style.css
+++ b/style.css
@@ -50,3 +50,42 @@ ul li {
 	background:#2c2b38;
 	color: #fff;
 }
+
+header {
+	height: 100vh;
+	overflow: hidden;
+	position: relative;
+}
+
+.absolute {
+	position: absolute;
+	width: 100%;
+	height: auto;
+	bottom: 0;
+}
+
+.bg {
+	height: 100vh;
+	background:url(img/bg.jpg) no-repeat center center;
+	-webkit-background-size:cover;
+	background-size: cover;
+}
+
+.coverText {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    padding-top: 35vh;
+}
+.coverText h2 {
+    text-align: right;
+    padding: 0 100px;
+    font-size: 5vw;
+    color: #fff;
+}
+.coverText p {
+    text-align: right;
+    padding: 30px 100px 0 60%;
+    font-size: 2.5em;
+    color: #fff;
+}
